--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <script defer src="js/index.js"></script>
 
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <div id="calculator">
